# nordic-thingy52-mcp

./: .gitignore  CLAUDE.md  FIX_SUMMARY.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PRODUCT_REQUIREMENTS_DOCUMENT.md  PROJECT_SUMMARY.md  PROMPT_GUIDE.md  QUICKSTART.md  QUICK_START.md  README.md  TESTING.md  TROUBLESHOOTING.md  connect_device.py  diagnose_device.py  feature_demo.py  final_test_results.txt  find_thingy_by_services.py  nodejs-thingy52-mcp.md  pyproject.toml  quick_scan.py  requirements.txt  run_server.py  scan_all_ble.py  scan_devices.py  setup_project.sh  test_all_tools.py  test_direct_connect.py  test_mcp_tools.py  test_setup.py  test_sound.py
docs/: AUTOMATION_ENGINE.md  NODEJS_TYPESCRIPT_PLAN.md  VERSION_NOTES.md
src/: __init__.py  bluetooth_client.py  constants.py  models.py  server.py
tests/: __init__.py  test_auto_reconnect.py  test_models.py
